--- a/web/package.json
+++ b/web/package.json
@@ -11,12 +11,18 @@
     ]
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@redwoodjs/forms": "6.3.3",
     "@redwoodjs/router": "6.3.3",
     "@redwoodjs/web": "6.3.3",
+    "framer-motion": "^9",
     "prop-types": "15.8.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@redwoodjs/vite": "6.3.3",
