--- a/api/package.json
+++ b/api/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@hubspot/api-client": "^10.0.0",
     "@redwoodjs/api": "6.3.3",
     "@redwoodjs/graphql-server": "6.3.3"
   }
