--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,11 @@
   "dependencies": {
     "@hubspot/api-client": "^10.0.0",
     "@redwoodjs/api": "6.4.0",
-    "@redwoodjs/graphql-server": "6.4.0"
+    "@redwoodjs/graphql-server": "6.4.0",
+    "metascraper": "^5.38.0",
+    "metascraper-description": "^5.38.0",
+    "metascraper-title": "^5.38.0",
+    "robots-parser": "^3.0.1",
+    "sitemapper": "^3.2.8"
   }
 }
