Landing page improvements (#6)
* mostly working

* updated landing page form to gather outcome and personality

* removed metescraper as it wasnt used

* Added dynamic chatbots from hubspot data

* added cross-fetch to hubspot lib

* added allow-forms to let the iframes work

* updaed iframe to include title

* removed some console.logs

--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@hubspot/api-client": "^10.0.0",
     "@redwoodjs/api": "6.4.0",
-    "@redwoodjs/graphql-server": "6.4.0"
+    "@redwoodjs/graphql-server": "6.4.0",
+    "@xmldom/xmldom": "^0.8.10",
+    "robots-parser": "^3.0.1",
+    "sitemapper": "^3.2.8"
   }
 }
