--- a/web/package.json
+++ b/web/package.json
@@ -23,7 +23,8 @@
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@redwoodjs/vite": "6.4.0",
