--- a/web/package.json
+++ b/web/package.json
@@ -18,11 +18,13 @@
     "@redwoodjs/forms": "6.4.0",
     "@redwoodjs/router": "6.4.0",
     "@redwoodjs/web": "6.4.0",
+    "fixie": "^6.0.1",
     "framer-motion": "^10.16.5",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@redwoodjs/vite": "6.4.0",
