--- a/fly.toml
+++ b/fly.toml
@@ -3,7 +3,7 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "jace-sks"
+app = "sidekicksammy"
 primary_region = "sea"
 
 [build]
@@ -21,10 +21,39 @@ primary_region = "sea"
   source = "data"
   destination = "/data"
 
-[http_service]
+[processes]
+  app = ".fly/start.sh"
+  cron = ".fly/cron.sh"
+
+[[services]]
+  http_checks = []
   internal_port = 8910
-  force_https = true
-  auto_stop_machines = true
-  auto_start_machines = true
-  min_machines_running = 0
   processes = ["app"]
+  protocol = "tcp"
+  [[services.ports]]
+    handlers = ["http"]
+    port = "80"
+  [[services.ports]]
+    handlers = ["tls", "http"]
+    port = "443"
+  [services.concurrency]
+    hard_limit = 25
+    soft_limit = 20
+  [[services.tcp_checks]]
+    grace_period = "1s"
+    interval = "15s"
+    restart_limit = 6
+    timeout = "2s"
+[vm]
+  cpu_kind = "shared"
+  memory_mb = 1024
+  cpus = 1
+
+
+#[http_service]
+#  internal_port = 8910
+#  force_https = true
+#  auto_stop_machines = true
+#  auto_start_machines = true
+#  min_machines_running = 0
+#  processes = ["app"]
