--- a/web/package.json
+++ b/web/package.json
@@ -15,11 +15,13 @@
     "@chakra-ui/react": "^2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@redwoodjs/auth-dbauth-web": "6.4.0",
     "@redwoodjs/forms": "6.4.0",
     "@redwoodjs/router": "6.4.0",
     "@redwoodjs/web": "6.4.0",
     "fixie": "^6.0.1",
     "framer-motion": "^10.16.5",
+    "humanize-string": "2.1.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
