--- a/fly.toml
+++ b/fly.toml
@@ -12,7 +12,7 @@ primary_region = "sea"
   release_command = ".fly/release.sh"
 
 [env]
-  DATABASE_URL = "file://data/sqlite.db"
+  DATABASE_URL = "file://data/sqlite-1.db"
   MIGRATE_ON_BOOT = "true"
   PORT = "8910"
   REDWOOD_DISABLE_TELEMETRY = "1"
