--- a/api/package.json
+++ b/api/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "@hubspot/api-client": "^10.0.0",
-    "@redwoodjs/api": "6.4.0",
-    "@redwoodjs/auth-dbauth-api": "6.4.0",
-    "@redwoodjs/graphql-server": "6.4.0",
+    "@redwoodjs/api": "7.0.1",
+    "@redwoodjs/api-server": "7.0.1",
+    "@redwoodjs/auth-dbauth-api": "7.0.1",
+    "@redwoodjs/graphql-server": "7.0.1",
     "@xmldom/xmldom": "^0.8.10",
     "node-html-markdown": "^1.3.0",
     "robots-parser": "^3.0.1",
