--- a/package.json
+++ b/package.json
@@ -7,17 +7,16 @@
     ]
   },
   "devDependencies": {
-    "@redwoodjs/auth-dbauth-setup": "6.4.0",
-    "@redwoodjs/cli-storybook": "6.4.0",
-    "@redwoodjs/core": "6.4.0"
+    "@redwoodjs/auth-dbauth-setup": "7.0.1",
+    "@redwoodjs/cli-storybook": "7.0.1",
+    "@redwoodjs/core": "7.0.1"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
     "root": true
   },
   "engines": {
-    "node": "=18.x",
-    "yarn": ">=1.15"
+    "node": "=20.x"
   },
   "prisma": {
     "seed": "yarn rw exec seed"
