removed quotes from cd.yml

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,7 +10,7 @@ jobs:
       # This step checks out a copy of your repository.
       - uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: 20
       - uses: actions/checkout@v2
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - run: flyctl deploy --remote-only
