--- a/fly.toml
+++ b/fly.toml
@@ -7,6 +7,8 @@ app = "sidekicksammy"
 primary_region = "sea"
 
 [build]
+  [build.args]
+    NODE_VERSION = "20"
 
 [deploy]
   release_command = ".fly/release.sh"
